--- a/style.css
+++ b/style.css
@@ -271,10 +271,150 @@ ul a::after {
     }
 
     section#contato {
-        maxwidth: 300px;
+        padding: 50px;
+
+    }
+
+}
+
+@media screen and (max-width: 780px) {
+
+    section#sobre article,
+    .img_sobre {
+        text-align: center;
+    }
+
+    #sobre img,
+    #formacao img {
+        width: 80%;
+    }
+
+    section#contato ul {
+        font-size: 0.9em;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    header {
+        display: none;
+        margin: 0;
+    }
+
+    section#home {
+        display: block;
+        font-size: 0.8em;
+        padding: 20px;
+        margin-top: -50px;
+    }
+
+    #home h1.especial {
+        text-align: center;
+    }
+
+    section#home>div.foto>div {
+        height: 400px;
+        margin: auto;
+        margin-top: 50px;
+    }
+
+    section#sobre {
+        padding: 0px;
+    }
+
+    #sobre>article>h1 {
+        font-size: 2.8em;
+    }
+
+    #sobre>div.img_sobre {
+        display: none;
+    }
+
+    section#formacao {
+        padding: 0;
+        margin-top: 100px;
+    }
+
+    section#formacao>article>h1 {
+        font-size: 2.8em;
+    }
+
+    section#projetos>article>h1 {
+        font-size: 2.8em;
+    }
+
+    section#projetos>article p {
+        font-size: 0.8em;
+        padding: 10px;
+    }
+
+    section#projetos>abbr>div.img_projetos {
+        display: block;
+        overflow-y: none;
+        height: 100%;
+    }
+
+    a>div.projeto-01,
+    div.projeto-02,
+    div.projeto-03 {
+        max-height: 25vh;
+        margin: auto;
+        transition: 500ms;
+        margin-bottom: 50px;
+    }
+
+    a>div.projeto-01:hover,
+    div.projeto-02:hover,
+    div.projeto-03:hover {
+        max-height: 100vh;
+    }
+
+    section#contato h1 {
+        font-size: 2.8em;
+    }
+
+    section#contato {
+        padding: 25px;
+        overflow-x: scroll;
+        box-shadow: -10px 0px 15px #00000057;
     }
 
     #contato ul {
         columns: 1;
+        max-width: 100%;
+
+    }
+
+    #contato ul>li {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    section#home {
+        font-size: 0.5em;
+    }
+
+    section#home article>h1.normal {
+        line-height: 40px;
+    }
+
+    #home article>h1.especial {
+        width: 260px;
+    }
+
+    #home>div.foto>div {
+        width: 100%;
+    }
+
+    section#sobre p {
+        text-align: justify;
+    }
+
+    section#formacao {
+        padding: 20px;
+    }
+
+    #contato ul>li {
+        font-size: 0.8em;
     }
 }
